--- a/docs/howtos/solutions/fraud-detection/transaction-risk-scoring/index-transaction-risk-scoring.mdx
+++ b/docs/howtos/solutions/fraud-detection/transaction-risk-scoring/index-transaction-risk-scoring.mdx
@@ -28,7 +28,7 @@ Transaction risk scoring is often combined in a single system with other fraud d
 
 ## Why you should use redis for transaction risk scoring
 
-A risk-based approach must be designed to create a frictionless flow as possible to **avoid slowing down** the transaction experience for legitimate customers while simultaneously preventing fraud. If your risk-based approach is too strict, it will **block legitimate transactions** and frustrate customers. If it is too lenient, it will **allow fraudulent transactions** to go through.
+A risk-based approach must be designed to create a frictionless flow and **avoid slowing down** the transaction experience for legitimate customers while simultaneously preventing fraud. If your risk-based approach is too strict, it will **block legitimate transactions** and frustrate customers. If it is too lenient, it will **allow fraudulent transactions** to go through.
 
 ### How to avoid false positives with rules engines
 
