write through slug added

--- a/docs/howtos/solutions/caching-architecture/write-through/index-write-through.mdx
+++ b/docs/howtos/solutions/caching-architecture/write-through/index-write-through.mdx
@@ -1,3 +1,15 @@
+---
+id: index-write-through
+title: How to use Redis for Write through caching strategy
+sidebar_label: How to use Redis for Write through caching strategy
+slug: /howtos/solutions/caching-architecture/write-through
+authors: [prasan, will]
+---
+
+import Authors from '@theme/Authors';
+
+<Authors frontMatter={frontMatter} />
+
 ## TODO (temporary)
 
 With the **Write-through** pattern, every time an application writes data to the cache, it also updates the records in the database.
